created empty ResultPage created empty VoteOnClaim created empty WriteClaim

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         <activity android:name=".JoinRandomRoomActivity" />
         <activity android:name=".CreateRoomActivity" />
         <activity android:name=".WaitForPlayersActivity" />
-        <activity android:name=".waitForClaim"></activity>
+        <activity android:name=".waitForClaim" />
+        <activity android:name=".WriteClaim" />
+        <activity android:name=".VoteOnClaim" />
+        <activity android:name=".ResultPage"></activity>
     </application>
 
 </manifest>
