--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.moment.themoment">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,7 +26,8 @@
         <activity android:name=".WaitForClaim" />
         <activity android:name=".WriteClaim" />
         <activity android:name=".VoteOnClaim" />
-        <activity android:name=".ResultPageActivity"></activity>
+        <activity android:name=".ResultPageActivity" />
+        <activity android:name=".CorrectAnswer"></activity>
     </application>
 
 </manifest>
