--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.moment.themoment"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -14,9 +14,23 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
         }
     }
     buildToolsVersion '26.0.2'
+    flavorDimensions "release"
+    productFlavors {
+        alpha {
+            dimension "release"
+            applicationId "com.moment.themoment"
+            minSdkVersion 26
+            targetSdkVersion 26
+            versionCode 1
+            versionName "1.0"
+        }
+    }
 }
 
 dependencies {
